# send-it-trading

./: .env.example  .gitignore  ARCHITECTURE.md  BOT_IMPROVEMENTS_PLAN.md  BRANCH_PUSH_SUMMARY.md  BUILD_COMPLETE.md  COMPLETE_SYSTEM.md  CONTRIBUTING.md  DASHBOARD.md  DASHBOARD_ACCESS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLAN.md  DIRECTORY_STRUCTURE.txt  Dockerfile  GITHUB_SETUP.md  INTEGRATION.md  LICENSE  PROJECT_STATUS.md  README.md  REPO_NAVIGATION.md  REPO_SUMMARY.md  SCANNERS_BUILT.md  SCANNERS_COMPLETE.md  SEND_IT_STRATEGY.md  SHARE_NOW.md  SYSTEM_ARCHITECTURE.md  WHERE_WE_ARE.md  alpaca_env.py  alpha_engine.py  check_portfolio.py  conviction_manager.py  conviction_manager_v2.py  dashboard.service  dashboard_api.py  deploy_dashboard.sh  deploy_send_it_mode.py  docker-compose.yml  example_integration.py  (+23 more)
analytics/: daily_performance_report.sh  profit_tracker.py
bot/: MODULE.md  main.py  train_synthetic.py
core/: __init__.py  alpaca_client.py  dynamic_config.py  options_trader.py  sizing.py
dashboard/: MODULE.md  api.py
data/: perf_history.jsonl  trade_journal.json
data_sources/: README.md  alt_data_aggregator.py  dashboard_widget.py  deploy.sh  manual_alpha_patch.py  patch_alpha.sh  pumpfun_sentiment.py  reddit_sentiment.py  requirements.txt  setup_cron.sh
engine/: MODULE.md  README.md  alpha_engine.py  check_portfolio.py  exit_positions.py  main_wrapper.py  main_wrapper_simple.py  master_config.json  orchestrator.py  orchestrator_simple.py  patch_main.py  run.py  sector_map.py
scanners/: __init__.py  (+7 more)
(+133 files in other folders)
